--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -5,45 +5,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
     android:elevation="10dp"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    android:layout_marginBottom="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp">
+        android:padding="5dp">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:id="@+id/img"
             android:src="@mipmap/ic_launcher"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/platoTxt"
-            android:text="@string/nombre_plato"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:layout_below="@id/img"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             />
+
+        <TextView
+            android:id="@+id/platoTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/img"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="@string/nombre_plato"
+            android:textColor="@color/azul"
+
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/descripcionTxt"
             android:text="@string/descripcion_plato"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/black"
+            android:fontFamily="@font/montserrat"
+            android:textSize="16sp"
+            android:textColor="@color/azul"
+            android:layout_toRightOf="@id/img"
             android:layout_below="@id/platoTxt"
             android:layout_marginTop="10dp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10dp"
             />
 
         <TextView
@@ -51,13 +54,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/precioTxt"
             android:text="@string/precio_plato"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/black"
+            android:fontFamily="@font/montserrat_medium"
+            android:textSize="24sp"
+            android:textColor="@color/amarillo"
+            android:layout_toRightOf="@id/img"
             android:layout_below="@id/descripcionTxt"
             android:layout_marginTop="10dp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10dp"
             />
 
     </RelativeLayout>
