--- a/app/src/main/res/layout/main_item_admin.xml
+++ b/app/src/main/res/layout/main_item_admin.xml
@@ -22,42 +22,132 @@
             />
 
         <TextView
+            android:id="@+id/IdLbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/img"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Id plato:"
+            android:textColor="@color/azul"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/IdTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/IdLbl"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="@string/id_plato"
+            android:textColor="@color/azul"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/DiaLbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/img"
+            android:layout_below="@id/IdLbl"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Dia:"
+            android:textColor="@color/azul"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/DiaTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/DiaLbl"
+            android:layout_below="@id/IdTxt"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="@string/dia_plato"
+            android:textColor="@color/azul"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/PlatoLbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/img"
+            android:layout_below="@id/DiaLbl"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Plato:"
+            android:textColor="@color/azul"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+        <TextView
             android:id="@+id/platoTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@id/img"
+            android:layout_below="@id/PlatoLbl"
             android:fontFamily="@font/montserrat_medium"
             android:text="@string/nombre_plato"
             android:textColor="@color/azul"
-
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/DescripcionLbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/img"
+            android:layout_below="@id/platoTxt"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Descripcion:"
+            android:textColor="@color/azul"
+            android:textSize="16sp"
+            android:textStyle="bold" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/descripcionTxt"
             android:text="@string/descripcion_plato"
-            android:fontFamily="@font/montserrat"
+            android:fontFamily="@font/montserrat_medium"
             android:textSize="16sp"
             android:textColor="@color/azul"
             android:layout_toRightOf="@id/img"
-            android:layout_below="@id/platoTxt"
+            android:layout_below="@id/DescripcionLbl"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             />
-
+        <TextView
+            android:id="@+id/PrecioLbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/img"
+            android:layout_below="@id/descripcionTxt"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Precio:"
+            android:textColor="@color/amarillo"
+            android:textSize="16sp"
+            android:textStyle="bold" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/precioTxt"
             android:text="@string/precio_plato"
             android:fontFamily="@font/montserrat_medium"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:textColor="@color/amarillo"
-            android:layout_toRightOf="@id/img"
+            android:layout_toRightOf="@id/PrecioLbl"
             android:layout_below="@id/descripcionTxt"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
