--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -23,7 +23,9 @@
         app:layout_constraintTop_toBottomOf="@id/menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="70dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -109,7 +111,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cenaRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                />
 
         </LinearLayout>
 
