--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_bold"
-        android:text="Explora nuestro menú"
+        android:text="Vista del menú:"
         android:textColor="@color/azul"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,9 @@
         app:layout_constraintTop_toBottomOf="@id/menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="70dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -109,9 +111,36 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cenaRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                />
 
         </LinearLayout>
+
     </ScrollView>
+
+    <ImageButton
+        android:id="@+id/btnAgregar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_agregar"
+        android:background="@null"
+        app:layout_constraintBottom_toTopOf="@id/navigation_bar"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:onClick="onAgregarButtonClick"/>
+
+
+
+    <LinearLayout
+        android:id="@+id/navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <include layout="@layout/navigation_bar"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
