cambiar icono de app + logo splash

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.357"
-        app:srcCompat="@drawable/logo_removebg_preview" />
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/txtCafeteria"
@@ -30,7 +30,7 @@
         android:layout_marginBottom="176dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="@string/app_name"
-        android:textColor="#931919"
+        android:textColor="#00093C"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
